--- a/src/app/carrello/carrello.component.html
+++ b/src/app/carrello/carrello.component.html
@@ -1,4 +1,9 @@
 <h2>Prodotti nel Carrello</h2>
+
+<p>
+  <a routerLink="/spedizione">Costi spedizione</a>
+</p>
+
 <div class="cart-item" *ngFor="let prodotto of oggettiNelCarrello">
   <span>
     {{ prodotto.nome }}
@@ -10,3 +15,23 @@
     Description: {{ prodotto.descrizione }}
   </p>
 </div>
+
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+
+  <div>
+    <label for="nome">
+      nome
+    </label>
+    <input id="nome" type="text" formControlName="nome">
+  </div>
+
+  <div>
+    <label for="indirizzo">
+      indirizzo
+    </label>
+    <input id="indirizzo" type="text" formControlName="indirizzo">
+  </div>
+
+  <button class="button" type="submit">Procedi al pagamento</button>
+
+</form>
